src/main/java/error/example/domain/error/SomeDomainError.java
package error.example.domain.error;

public class SomeDomainError extends DomainError {

    public SomeDomainError(String message) {
        super(message);
    }
}
